# OpenISE

./: .gitignore  README.md  收录内容.md  贡献方法.md
.github/workflows/: sync-to-openise.yml
00-大一上期末/军理/: 军事理论大题真题.docx  军事理论总结.docx  军理200单选+100多选.docx  军理200题题库.doc  军理900题题库.docx  军理复习题纲(1).doc  军理试题（最新版）.docx  题库.docx
C语言程序设计及实验/: README.md
scripts/: sync.py
scripts/templates/: sidebar.html
交通大数据技术/22级-蔡思远/: README.md
交通安全/22级-蔡思远/: README.md
交通工程导论/22级-蔡思远/: README.md
交通工程综合实验/22级-蔡思远/: README.md
人工智能导论/: README.md
人工智能编程语言/: README.md
传感器原理与应用/: README.md
分布式计算（含实验）/: README.md
图像处理/: README.md
多智能体集群控制技术（含实验）/: README.md
工程数学/: README.md
微机原理/: README.md
控制电机技术/: README.md
操作系统/: README.md
数字逻辑设计/: README.md
数字逻辑设计实验/: README.md
数据库原理/: README.md  数据库实验大作业--零售商数据库题目A.docx
数据库原理（交通）/: README.md
无人系统导论/: README.md
智能机器人技术/: README.md
智能机器人综合实验/: README.md
智能科学与技术/10-大二上/高级程序设计及实验（C++）/2025秋季学期/实验与大作业-林楗棋/大作业/src/: CMakeLists.txt  student_manager
智能科学与技术/10-大二上/高级程序设计及实验（C++）/2025秋季学期/实验与大作业-林楗棋/大作业/src/class/: publication.cpp  publication.h
智能科学与技术/10-大二上/高级程序设计及实验（C++）/2025秋季学期/实验与大作业-林楗棋/大作业/src/manageCli/: manager.cpp
机器学习/: README.md
机械设计基础/: README.md
物联网/: README.md
电机与拖动技术/: README.md
电路理论基础实验/: README.md
离散数学/: README.md
科技论文写作/: README.md
自控实验/: README.md
自然语言处理/: README.md
计算机网络/: README.md
计算机视觉/: README.md
认知科学基础/: README.md
软件工程（含实验）/: README.md
运筹学/: README.md
马克思主义基本原理/: 77563209206260【必看】马克思主义原理整理版（11页纸）.docx  马克思主义原理重点问题.md  马克思主义基本原理期末复习.md
高级程序设计及实验（C++）/: README.md
(+1732 files in other folders)
